--- a/experimental/figures.ipynb
+++ b/experimental/figures.ipynb
@@ -2158,13 +2158,25 @@
     "datafiles = {\n",
     "    'ref':('data_exp_zs_20210105_g3_zinser-53fg.nc',),\n",
     "    'expA':('data_exp_zs_20210105_g3_zinser-53fg-itest.nc',),\n",
-    "    'expB':('data_exp_zs_20210105_g3_zinser-53fg-itestday1.nc',),\n",
+    "    'expB':('data_exp_zs_20210105_g3_zinser-53fg-itest-keepeverysecond.nc',),\n",
     "    'expC':('data_exp_zs_20210105_g3_zinser-53fg-itest-keepeverythird.nc',),\n",
     "}\n",
-    "parameters = {'divrate':'m4', 'E_star':'m12u', 'daily growth':'m12u'}\n",
+    "parameters = {'daily growth':'m4', 'divrate':'m4', 'daily loss':'m4'}\n",
     "data_name = 'zinser'\n",
     "exp_names = {'ref':'full data', 'expA':'experiment A', 'expB':'experiment B', 'expC':'experiment C'}\n",
-    "parameter_desc = {'E_star':'E$_k$', 'divrate':'daily div.', 'daily growth':'daily C fix.'}\n",
+    "parameter_desc = {\n",
+    "    'E_star':'E$_k$', \n",
+    "    'divrate':'division rate', \n",
+    "    'daily growth':'carbon fixation', \n",
+    "    'daily loss':'carbon loss',\n",
+    "}\n",
+    "\n",
+    "parameter_units = {\n",
+    "    'E_star':'$\\mu$mol photons m$^{-2}$ s$^{-1}$', \n",
+    "    'divrate':'d$^{-1}$', \n",
+    "    'daily growth':'fg C cell$^{-1}$ d$^{-1}$', \n",
+    "    'daily loss':'fg C cell$^{-1}$ d$^{-1}$',\n",
+    "}\n",
     "\n",
     "add_violinlabels = True\n",
     "\n",
@@ -2211,6 +2223,10 @@
     "                            model_time_hours = ncg['time'][:]/60\n",
     "                            #print((model_time_hours[-1]-model_time_hours[0])/24)\n",
     "                            plotdata[exp]['parameters'][model_name][p] = extract_growth(ncg.groups[model_name], model_time_hours=model_time_hours, compute_int=True)[0]/((model_time_hours[-1]-model_time_hours[0])/24)\n",
+    "                        elif p == 'daily loss':\n",
+    "                            model_time_hours = ncg['time'][:]/60\n",
+    "                            #print((model_time_hours[-1]-model_time_hours[0])/24)\n",
+    "                            plotdata[exp]['parameters'][model_name][p] = extract_loss(ncg.groups[model_name], model_time_hours=model_time_hours, compute_int=True)[0]/((model_time_hours[-1]-model_time_hours[0])/24)\n",
     "                        else:\n",
     "                            plotdata[exp]['parameters'][model_name][p] = ncg.groups[model_name].variables[p][:].data\n",
     "\n",
@@ -2219,7 +2235,7 @@
     "#\n",
     "\n",
     "def violinplot(ax, dataset, color=None, linewidth=None, **violinplotargs):\n",
-    "    parts = ax.violinplot(dataset, **violinplotargs)\n",
+    "    parts = ax.violinplot(dataset, showmeans=True, **violinplotargs)\n",
     "    \n",
     "    for part in parts:\n",
     "        if part == 'bodies':\n",
@@ -2248,10 +2264,10 @@
     "axs_params = np.empty(shape=num_params, dtype=object)\n",
     "\n",
     "gs_bar = mpl.gridspec.GridSpec(num_data, 1)\n",
-    "gs_bar.update(bottom=0.38, hspace=0.04)\n",
+    "gs_bar.update(bottom=0.38, hspace=0.045)\n",
     "\n",
     "gs_params = mpl.gridspec.GridSpec(1, num_params)\n",
-    "gs_params.update(top=0.32, left=0.09)\n",
+    "gs_params.update(top=0.32, left=0.11, wspace=0.27)\n",
     "\n",
     "for i in range(num_data):\n",
     "    axs_bar[i] = plt.subplot(gs_bar[i,0])\n",
@@ -2271,11 +2287,14 @@
     "    violinplot(ax, [plotdata[exp]['parameters'][model_name][p] for exp in datafiles], \n",
     "               positions=positions, color=colors_model[model_name])\n",
     "    ax.grid(axis='y', zorder=0)\n",
+    "    #ax.set(xticks=[], ylabel='{} ({})'.format(parameter_desc[p], parameter_units[p]))\n",
     "    ax.set(xticks=[])\n",
+    "    ax.set_ylabel(parameter_units[p], labelpad=0)\n",
     "\n",
     "    if add_violinlabels:\n",
     "        for iexp, exp in enumerate(datafiles):\n",
-    "            ax.text(positions[iexp]-0.5, 0.1, exp_names[exp], transform=ax.get_xaxis_transform(), rotation=90, ha='center', va='bottom', size=mpl.rcParams['xtick.labelsize'])\n",
+    "            ax.text(positions[iexp]-0.5, 0.1, exp_names[exp], transform=ax.get_xaxis_transform(), \n",
+    "                    rotation=90, ha='center', va='bottom', size=mpl.rcParams['xtick.labelsize'])\n",
     "        ax.set_xlim(left=-0.7)\n",
     "    ylim = ax.get_ylim()\n",
     "    ax.set_ylim(top = ylim[1] + 0.2 * (ylim[1] - ylim[0]))\n",
@@ -2343,14 +2362,17 @@
     "ilabel = -1\n",
     "for ax in axs_bar.flat:\n",
     "    ilabel += 1\n",
-    "    ax.text(0.01, 0.98, 'ABCDEFG'[ilabel], size=12, ha='left', va='top', color='0.1', transform=ax.transAxes, path_effects=path_effects)\n",
+    "    ax.text(0.01, 0.98, 'ABCDEFG'[ilabel], size=12, ha='left', va='top', color='0.1', \n",
+    "            transform=ax.transAxes, path_effects=path_effects)\n",
     "\n",
     "iax = -1\n",
     "for ax, p in zip(axs_params.flat, parameters):\n",
     "    iax += 1\n",
     "    ilabel += 1\n",
-    "    ax.text(0.01, 0.98, '{})'.format('ABCDEFG'[ilabel]), size=12, ha='left', va='top', color='0.1', transform=ax.transAxes, path_effects=path_effects)\n",
-    "    ax.text(0.15, 0.98, '{} {}'.format(desc_model[parameters[p]], parameter_desc[p]), ha='left', va='top', color='0.1', transform=ax.transAxes, path_effects=path_effects)\n",
+    "    ax.text(0.01, 0.98, '{})'.format('ABCDEFG'[ilabel]), size=12, ha='left', va='top', color='0.1', \n",
+    "            transform=ax.transAxes, path_effects=path_effects)\n",
+    "    ax.text(0.15, 0.98, '{} {}'.format(desc_model[parameters[p]], parameter_desc[p]), \n",
+    "            ha='left', va='top', color='0.1', transform=ax.transAxes, path_effects=path_effects)\n",
     "\n",
     "if save_plots:\n",
     "    fig.savefig('figures/zinser_xval.pdf', bbox_inches='tight', dpi=300)"
